Update env and dependencies

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,9 @@
 PORT = 3000
-API_KEY
-API_BASEURL
+API_KEY_GEO
+API_GEO_BASEURL = 'http://api.geonames.org/searchJSON'
+API_KEY_WEATHERBIT
+API_WEATHERBIT_BASEURL = 'https://api.weatherbit.io/v2.0/forecast/daily'
+API_WEATHERBIT_MAX_FORECAST = 16
+API_KEY_PIXABAY
+API_PIXABAY_BASEURL = 'https://pixabay.com/api/'
 MODE = 'PROD' | 'ENV'
