--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@babel/core": "^7.11.6",
     "@babel/eslint-parser": "^7.11.5",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/preset-env": "^7.11.5",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
@@ -26,6 +27,7 @@
     "eslint-plugin-standard": "^4.0.1",
     "favicons-webpack-plugin": "^4.2.0",
     "file-loader": "^6.1.0",
+    "html-loader": "^1.3.1",
     "html-webpack-plugin": "^4.4.1",
     "jest": "^26.4.2",
     "jsdom": "^16.4.0",
