--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "sass-loader": "^10.0.2",
+    "sass-to-string": "^1.1.0",
     "style-loader": "^1.2.1",
     "terser-webpack-plugin": "^4.1.0",
     "webpack": "^4.44.1",
