--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "sass-loader": "^10.0.2",
     "sass-to-string": "^1.1.0",
     "style-loader": "^1.2.1",
+    "supertest": "^5.0.0",
     "terser-webpack-plugin": "^4.1.0",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
