--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,7 @@
     "ecmaVersion": 2018,
     "sourceType": "module"
   },
+  "parser": "babel-parser",
   "rules": {
     "semi": "off",
     "space-before-function-paren": "off"
