--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,9 +2,10 @@
   "env": {
     "browser": true,
     "es6": true,
-    "node": true
+    "node": true,
+    "mocha": true
   },
-  "extends": ["standard"],
+  "extends": ["standard", "plugin:cypress/recommended"],
   "globals": {
     "Atomics": "readonly",
     "SharedArrayBuffer": "readonly"
@@ -13,8 +14,8 @@
     "ecmaVersion": 2018,
     "sourceType": "module"
   },
-  "parser": "babel-parser",
-  "rules": {
+  "parser": "@babel/eslint-parser",
+    "rules": {
     "semi": "off",
     "space-before-function-paren": "off"
   }
