Update tests and configurations

--- a/.env.example
+++ b/.env.example
@@ -6,4 +6,4 @@ API_WEATHERBIT_BASEURL = 'https://api.weatherbit.io/v2.0/forecast/daily'
 API_WEATHERBIT_MAX_FORECAST = 16
 API_KEY_PIXABAY
 API_PIXABAY_BASEURL = 'https://pixabay.com/api/'
-MODE = 'PROD' | 'DEV' | 'TEST'
+MODE = 'PROD' | 'DEV'
