Use base64 encoded images

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,7 @@
   "parser": "@babel/eslint-parser",
     "rules": {
     "semi": "off",
-    "space-before-function-paren": "off"
+    "space-before-function-paren": "off",
+    "no-return-assign": "off"
   }
 }
