--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "outDir": "./built",
     "sourceMap": true,
     "allowJs": true,
-    "target": "es2018",
+    "target": "ESNext",
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
     "moduleResolution": "node",
